# nanomlops-project-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.dvc/: .gitignore  config
.gitea/workflows/: ci.yaml
feature_repo/: feature_store.yaml  features.py
scripts/: setup_env.sh
src/: data.py  train.py
